assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Mono:wght@300&display=swap");

/*------------------------------------*\
  #COLORS
\*------------------------------------*/

:root {
  --black-color: rgb(0, 0, 0);
  --white-color: rgb(255, 255, 255);
  --yellow-color: rgb(255, 255, 0);
  --red-color: rgb(178, 34, 52);
  --covid-color-green: rgb(0, 192, 163);
  --purple-color: rgb(128, 0, 128);
  --gray-color: rgb(178, 180, 178);
  --dashboard-blue: rgb(2, 175, 255);
  --game-body: rgb(39, 39, 39);
  --red-controller: rgb(255, 0, 0);
  --pink-controller: rgb(255, 192, 203);
  --maroon-controller: rgb(128, 0, 0);
  --lightgreen-controller: rgb(144, 238, 144);
  --darkgreen-controller: rgb(0, 100, 0);
  --green-controller: rgb(0, 128, 0);
  --lightblue-controller: rgb(173, 216, 230);
  --blue-controller: rgb(0, 0, 255);
  --darkblue-controller: rgb(0, 0, 139);
  --lightyellow-controller: rgb(255, 255, 224);
  --orange-controller: rgb(255, 165, 0);
  --size: 100vw;
}

/*------------------------------------*\
  #GLOBAL SETTINGS
\*------------------------------------*/

*,
::after,
::before {
  box-sizing: border-box;
}

* {
  font-family: "Press Start 2P", sans-serif, arial;
  touch-action: manipulation; /* 300ms tap delay on game-controller https://developers.google.com/web/updates/2013/12/300ms-tap-delay-gone-away */
}

body {
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: var(--black-color);
}

.container {
  width: var(--size);
  height: var(--size);
  margin-right: auto;
  margin-left: auto;
  padding-left: 10px;
  padding-right: 10px;
  color: var(--white-color);
}

/* disable text selection */
.noselect {
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /*Firefox */
  -ms-user-select: none; /* Internet Explorer and Edge */
  user-select: none;
}

.text-white {
  color: var(--white-color);
}

.text-underline {
  text-decoration: underline;
}

.text-uppercase {
  text-transform: uppercase;
}

.text-green {
  color: var(--covid-color-green);
}

/*------------------------------------*\
  #GAME.HTML
\*------------------------------------*/

canvas {
  width: 100%;
  border: 1px solid var(--white-color);
  background-image: url("../images/background.jpg");
}

.top-banner {
  display: grid;
  row-gap: 2px;
  grid-template-rows: 1fr 0.5fr 0.5fr;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-areas:
    "returnMainMenu inGameSoundFx inGame-music"
    "highScore      level         level"
    "score          ships         ships";
}

.return-main-menu {
  grid-area: returnMainMenu;
  width: 80%;
}

.ingame-soundfx {
  width: 80%;
  justify-self: center;
  grid-area: inGameSoundFx;
}

.ingame-music {
  justify-self: end;
  width: 80%;
  grid-area: inGame-music;
}

.high-score-title,
.high-score {
  color: var(--dashboard-blue);
  font-family: "Roboto Mono", sans-serif, arial;
  margin: 0;
  font-size: 1.4rem;
  grid-area: highScore;
}

.level-header,
.level {
  color: var(--dashboard-blue);
  font-family: "Roboto Mono", sans-serif, arial;
  justify-self: end;
  margin: 0;
  font-size: 1.4rem;
  grid-area: level;
}

.score-title,
.score-value {
  color: var(--dashboard-blue);
  font-family: "Roboto Mono", sans-serif, arial;
  margin: 0;
  font-size: 1.4rem;
  grid-area: score;
}

.lives-header,
.lives {
  color: var(--dashboard-blue);
  font-family: "Roboto Mono", sans-serif, arial;
  justify-self: end;
  margin: 0;
  font-size: 1.4rem;
  grid-area: ships;
}

.controller {
  margin-top: 8px;
  display: grid;
  width: 100%;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-gap: 10px;
  justify-items: center;
}

button {
  height: 50px;
  width: 100%;
  font-size: 0.7rem;
  cursor: pointer;
  outline: none;
  box-shadow: 0 0.2em var(--gray-color);
  background-color: var(--white-color);
  color: var(--purple-color);
  border-radius: 10px;
  line-height: 1rem;
}

button:active {
  box-shadow: none;
  position: relative;
  top: 0.2em;
}

/* Video Game button styling based on https://codepen.io/DanielWeiner/pen/iFadn */
.fire-button {
  font-size: 3rem;
  text-shadow: 1px 1px var(--pink-controller), -1px -1px var(--maroon-controller);
  line-height: 1.5em;
  text-align: center;
  display: inline-block;
  width: 1.5em;
  border-radius: 0.75em;
  color: var(--red-controller);
  -webkit-box-shadow: 0 0.2em var(--maroon-controller); /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
  -moz-box-shadow: 0 0.2em var(--maroon-controller); /* Firefox 3.5 - 3.6 */
  box-shadow: 0 0.2em var(--maroon-controller); /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
  margin: 5px;
  background-color: var(--red-controller);
  background: linear-gradient(to bottom, red, maroon);
  cursor: pointer;
  padding-left: 5px;
  grid-column: 3 / 4;
}

.up-button {
  font-size: 3rem;
  text-shadow: 1px 1px var(--lightgreen-controller), -1px -1px var(--darkgreen-controller);
  line-height: 1.3em;
  text-align: center;
  display: inline-block;
  width: 1.6em;
  border-radius: 0.75em;
  color: var(--green-controller);
  -webkit-box-shadow: 0 0.2em var(--darkgreen-controller);
  -moz-box-shadow: 0 0.2em var(--darkgreen-controller);
  box-shadow: 0 0.2em var(--darkgreen-controller);
  margin: 5px;
  background-color: var(--green-controller);
  background: linear-gradient(to top, green, darkgreen);
  cursor: pointer;
  padding-left: 2px;
}

.left-button {
  font-size: 3rem;
  text-shadow: 1px 1px var(--lightblue-controller), -1px -1px var(--darkblue-controller);
  line-height: 1.3em;
  text-align: center;
  display: inline-block;
  width: 1.6em;
  border-radius: 0.75em;
  color: var(--blue-controller);
  -webkit-box-shadow: 0 0.2em var(--darkblue-controller);
  -moz-box-shadow: 0 0.2em var(--darkblue-controller);
  box-shadow: 0 0.2em var(--darkblue-controller);
  margin: 5px;
  background-color: var(--blue-controller);
  background: linear-gradient(to left, blue, darkblue);
  cursor: pointer;
  padding-left: 2px;
}
/* ... */

